templates/service-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: osdu-helm-charts
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: osdu-helm-charts
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 10.4.1
    helm.sh/chart: grafana-7.3.11
  name: grafana-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - grafana.baremetal-dev0b.epm-osdu.projects.epam.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: common-tfcert
      mode: SIMPLE
